--- a/src/locales/en/translationEN.json
+++ b/src/locales/en/translationEN.json
@@ -1,5 +1,5 @@
 {
-    "address": "17-10, Dosan-daero 8-gil, Gangnam-gu, Republic of Korea 1F",
+    "address": "411-A, IT-belly, 40, Imi-ro, Uiwang-si, Gyeonggi-do, Republic of Korea",
     "address2": "Gangnam-gu, Seoul",
     "address3": "Dosan-daero",
     "fourth": {
