--- a/src/locales/en/translationEN.json
+++ b/src/locales/en/translationEN.json
@@ -260,23 +260,23 @@
         "desc": [
             {
                 "id": 1,
-                "title": "Motion",
-                "content": "Our company provided all the appliances in need, as well as VFX, social advertising design, artwork, game development, technology, and output. In addition, we also deduce motion graphics with subtitles, dynamic typography, animation, and images composed of CG (computer graphics)."
+                "title": "Product",
+                "content": "Maxius is the only self-developed semiconductor  company who builds servers with high  technology. As we provides solutions specialized  for intelligent data centers and the IT industry,  we will develop into a growing company in  global market."
             },
             {
                 "id": 2,
-                "title": "Design",
-                "content": "Our company experiences conducting brand design with various companies, including UI/UX, branding, editing, graphics, industrial design, and maintenance of new media, company, social, and marketing design. In addition, we will coordinate with customers and try our best to compromise the business needs and achieve the goal."
+                "title": "Technology",
+                "content": "Maxius is the only self-developed semiconductor  company who builds servers with high  technology. As we provides solutions specialized  for intelligent data centers and the IT industry,  we will develop into a growing company in  global market."
             },
             {
                 "id": 3,
-                "title": "Develop",
-                "content": "The development area was recognized for its diversity through the verification of the stability stage. The development team, who always concerned about the stability of the development. Moreover, they try their best to develop their own platforms through collaborations between them and companies."
+                "title": "Application",
+                "content": "Maxius is the only self-developed semiconductor  company who builds servers with high  technology. As we provides solutions specialized  for intelligent data centers and the IT industry,  we will develop into a growing company in  global market."
             },
             {
                 "id": 4,
-                "title": "Culture",
-                "content": "We understand the society needs their own label/keyword of the culture to share their communication. This has become part of their strength in their lives. Moreover, we realized connect people with cultural projects will bring happiness to everyone. Therefore, Loocreative tries to create various cultural events such as music and seminars to reach out to people."
+                "title": "Block Chain",
+                "content" : ""
             }
         ]
     }
