--- a/src/locales/kr/translationKR.json
+++ b/src/locales/kr/translationKR.json
@@ -260,23 +260,23 @@
         "desc": [
             {
                 "id": 1,
-                "title": "Motion",
-                "content": "VFX, 소셜광고 디자인, 아트웍, 게임개발 등 이미지와 디자인 제작에 필요한 모든 것 그리고 고객이 필요로 하는 기술과 결과물을 제공합니다. 또한 모션그래픽 및 자막, 동적 타이포그래피, 애니메이션 등 촬영 이미지와 CG를 합성하여 완성도 있는 결과물을 도출합니다."
+                "title": "Product",
+                "content": "맥시우스는 Sever, Storage, IDC 솔루션, Block Chain 솔루션  의 최적화되고 특화된 알고리즘 을 제공하고 있으며, 반도체 경쟁 차별화의 노력 하겠습니다."
             },
             {
                 "id": 2,
-                "title": "Design",
-                "content": "UI/UX, 브랜드/편집/그래픽/산업디자인 및 뉴미디어, 컴퍼니/브랜드/소셜/마케팅디자인 유지보수 등 넓은 바운더리와 다양한 경험으로 많은 기업들과 브랜드디자인을 진행하고 있습니다. 고객과 기업의 니즈를 맞추고 조율하여 최상의 결과물을 도출할 수 있게 합니다."
+                "title": "Technology",
+                "content": "맥시우스는 국내 유일의 자체 개발 시스템 반도체를 이용하여 서버를 만드는 회사로, 높은 기술력을 가지고 있습니다. 지능형 데이터 센터와 IT 산업분야에 특화된 솔루션을 제공하는 기업으로서 세계시장에서 지속 성장하는 기업으로 발전해 나갈 것입니다."
             },
             {
                 "id": 3,
-                "title": "Develop",
-                "content": "개발영역은 각 단계를 차근히 밟으며 안정적으로 증명을 거쳐 그 다양성과 안정성을 인정받고 있습니다. 트렌디하면서 안정성있는 개발을 위해 언제나 고민하고 노력하는 개발팀은 기업과의 협업 업무부터 자체 플랫폼 개발 등 다양한 업무를 진행합니다."
+                "title": "Application",
+                "content": "맥시우스의 응용 분야는 인공지능/  유전체분석, 엣지 컴퓨팅, IDC 센터  등의 분야가 있으며, 방대한 데이터 분석 및 데이터 분산처리 기능,  고성능 서버와 솔루션을 결합한 IDC Center 구축을 하고 있습니다. "
             },
             {
                 "id": 4,
-                "title": "Culture",
-                "content": "다양한 사람들이 각자 원하는 문화라는 키워드로 소통하고 나누며 참여하는 것이 얼마나 큰 힘이 되는지, 사람을 이어주는 문화사업이 얼마나 많은 행복을 주는지 알고 있습니다. loocreative는 뮤직, 세미나 등 다양한 문화행사를 만들고 함께 나누려 노력합니다."
+                "title": "Block Chain",
+                "content": ""
             }
         ]
     }
