--- a/src/locales/en/translationEN.json
+++ b/src/locales/en/translationEN.json
@@ -279,5 +279,9 @@
                 "content": "We understand the society needs their own label/keyword of the culture to share their communication. This has become part of their strength in their lives. Moreover, we realized connect people with cultural projects will bring happiness to everyone. Therefore, Loocreative tries to create various cultural events such as music and seminars to reach out to people."
             }
         ]
+    },
+    "first": {
+        "subTitle": "Maxius is a company that develops its own system zsemiconductors and manufactures and sells computers for high-performance servers. We supply equipment and solutions to clients in various cutting edge fields.",
+        "note": "Together, we will be the best in value and speed."
     }
 }
