--- a/src/locales/kr/translationKR.json
+++ b/src/locales/kr/translationKR.json
@@ -2,6 +2,23 @@
     "address": "서울특별시 강남구 도산대로 8길 17-10 이리스빌딩 1F",
     "address2": "서울특별시 강남구",
     "address3": "도산대로",
+    "second": {
+       "number1": "1.",
+       "number2": "2.",
+       "number3": "3.",
+       "number4": "4.",
+       "textWhite1": "기 기 제 조 업 체 ",
+       "textWhite2": "자 체 생 산 시 스 템 기 기 탑 재 ",
+       "textWhite3": "생산 판매 ",
+       "textWhite4": "HPS기반 운영 ",
+       "textWhite5": "구축  ",
+       "textWhite6": "블록체인  ",
+       "textWhite7": "관련 솔루션 구축  ",
+       "textYellow1": "자 체 생 산",
+       "textYellow2": "고성능 서버 ",
+       "textYellow3": "블록체인 IDC",
+       "textYellow4": "IPFS "
+    },
     "fourth": {
         "history": [
             {
