--- a/src/locales/en/translationEN.json
+++ b/src/locales/en/translationEN.json
@@ -7,7 +7,7 @@
         "number2": "2.",
         "number3": "3.",
         "number4": "4.",
-        "textWhite1": "device manufacturer",
+        "textWhite1": "device manufacturer.",
         "textWhite21": "Production and Sales of",
         "textWhite22": "igh-",
         "textWhite23": "erformance",
