--- a/src/locales/kr/translationKR.json
+++ b/src/locales/kr/translationKR.json
@@ -177,30 +177,20 @@
             }
         ]
     },
-    "third": {
-        "desc": [
-            {
-                "id": 1,
-                "title": "Product",
-                "content": "맥시우스는 Sever, Storage, IDC 솔루션, Block Chain 솔루션  의 최적화되고 특화된 알고리즘 을 제공하고 있으며, 반도체 경쟁 차별화의 노력 하겠습니다."
-            },
-            {
-                "id": 2,
-                "title": "Technology",
-                "content": "맥시우스는 국내 유일의 자체 개발 시스템 반도체를 이용하여 서버를 만드는 회사로, 높은 기술력을 가지고 있습니다. 지능형 데이터 센터와 IT 산업분야에 특화된 솔루션을 제공하는 기업으로서 세계시장에서 지속 성장하는 기업으로 발전해 나갈 것입니다."
-            },
-            {
-                "id": 3,
-                "title": "Application",
-                "content": "맥시우스의 응용 분야는 인공지능/  유전체분석, 엣지 컴퓨팅, IDC 센터  등의 분야가 있으며, 방대한 데이터 분석 및 데이터 분산처리 기능,  고성능 서버와 솔루션을 결합한 IDC Center 구축을 하고 있습니다. "
-            },
-            {
-                "id": 4,
-                "title": "Block Chain",
-                "content": ""
-            }
-        ]
-    },
+    "thirdPage": {
+        "product": {
+          "text": "맥시우스는 Sever, Storage, IDC 솔루션, Block Chain 솔루션 의 최적화되고 특화된 알고리즘 을 제공하고 있으며, 반도체 경쟁 차별화의 노력 하겠습니다."
+        },
+        "technology": {
+          "text": "맥시우스는 국내 유일의 자체 개발 시스템 반도체를 이용하여 서버를 만드는 회사로, 높은 기술력을 가지고 있습니다. 지능형 데이터 센터와 IT 산업분야에 특화된 솔루션을 제공하는 기업으로서 세계시장에서 지속 성장하는 기업으로 발전해 나갈 것입니다."
+        },
+        "application": {
+          "text": "맥시우스의 응용 분야는 인공지능/유전체분석, 엣지 컴퓨팅, IDC 센터 등의 분야가 있으며, 방대한 데이터  분석 및 데이터 분산처리 기능, 고성능 서버와 솔루션을 결합한 IDC Center 구축을 하고 있습니다. "
+        },
+        "blockchain": {
+          "text": ""
+        }
+      },
     "first": {
         "subTitle": "맥시우스는 시스템반도체를 자체 개발하여 고성능 서버용 컴퓨터를 제조 판매하는 회사입니다. 우리는 고객에게 최고의 장비와 솔루션을 제공합니다. ",
         "note": "우리는 기업의 가치와 속도 면에서 최고가 될것입니다."
