--- a/src/locales/en/translationEN.json
+++ b/src/locales/en/translationEN.json
@@ -1,6 +1,6 @@
 {
     "address": "411-A, IT-belly, 40, Imi-ro, Uiwang-si, Gyeonggi-do, Republic of Korea",
-    "address2": "Gangnam-gu, Seoul",
+    "address2": "411-A, IT-belly, 40, Imi-ro, Uiwang-si, Gyeonggi-do, Republic of Korea ",
     "address3": "Dosan-daero",
     "second": {
         "number1": "1.",
