--- a/src/locales/kr/translationKR.json
+++ b/src/locales/kr/translationKR.json
@@ -1,6 +1,6 @@
 {
     "address": "경기도 의왕시 이미로 40 인덕원 IT벨리 A동 411호",
-    "address2": "서울특별시 강남구",
+    "address2": "서울특별시 강남구 도산대로 8길 17-10 이리스빌딩 1F",
     "address3": "도산대로",
     "second": {
        "number1": "1.",
